Fix HTML snippet on Setup Page rendering on Safari

--- a/frontend/src/pages/Setup/CodeBlock/CodeBlock.module.scss
+++ b/frontend/src/pages/Setup/CodeBlock/CodeBlock.module.scss
@@ -34,6 +34,7 @@
     max-width: 100%;
     min-width: 100%;
     overflow: auto;
+    overflow-wrap: break-word;
     padding: 10px;
     position: relative;
     resize: none;
